[package]
name = "stoked-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Stoked Next.js APIs"
license = "MIT"

[[bin]]
name = "stoked"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "signal"] }
dirs = "6.0"
open = "5.3"
tiny_http = "0.12"
url = "2.5"
rand = "0.9"
mime_guess = "2.0"
walkdir = "2.5"
